--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,12 @@
 {
     "compilerOptions": {
+        "target": "ES2022",
         "resolveJsonModule": true,
+        "moduleResolution": "node",
         "esModuleInterop": true,
+        "module": "CommonJS",
+        "lib": [
+            "DOM"
+        ]
     },
 }
