--- a/package.json
+++ b/package.json
@@ -1,19 +1,8 @@
 {
-  "main": "index.ts",
-  "scripts": {
-    "start": "ts-node app.ts"
-  },
-  "dependencies": {
-    "@cliqz/adblocker-puppeteer": "^1.26.1",
-    "express": "^4.18.2",
-    "process.argv": "^0.6.1",
-    "puppeteer": "^19.7.1",
-    "rome": "^11.0.0",
-    "ts-node": "^10.9.1",
-    "ucmd": "^0.4.0",
-    "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.17"
-  }
+    "scripts": {
+        "start": "cd backend && npm start"
+    },
+    "dependencies": {
+        "rome": "^11.0.0"
+    }
 }
