--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,13 @@
     "process.argv": "^0.6.1",
     "puppeteer": "^19.7.1",
     "rome": "^11.0.0",
+    "socket.io": "^4.6.1",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.14.6",
+    "typescript": "^4.9.5"
   }
 }
