--- a/backend/package.json
+++ b/backend/package.json
@@ -5,17 +5,24 @@
   },
   "dependencies": {
     "@cliqz/adblocker-puppeteer": "^1.26.1",
+    "csv": "^6.2.8",
     "express": "^4.18.2",
+    "pako": "^2.1.0",
     "process.argv": "^0.6.1",
     "puppeteer": "^19.7.1",
     "rome": "^11.0.0",
     "socket.io": "^4.6.1",
+    "tar": "^6.1.13",
     "ts-node": "^10.9.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "write-file-atomic": "^5.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.6",
+    "@types/pako": "^2.0.0",
+    "@types/tar": "^6.1.4",
+    "@types/write-file-atomic": "^4.0.0",
     "typescript": "^4.9.5"
   }
 }
