--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,8 @@
 {
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node app.ts"
+    "start": "ts-node app.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@cliqz/adblocker-puppeteer": "^1.26.1",
@@ -18,11 +19,14 @@
     "write-file-atomic": "^5.0.0"
   },
   "devDependencies": {
+    "ts-jest": "^29.0.5",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.14.6",
     "@types/pako": "^2.0.0",
     "@types/tar": "^6.1.4",
     "@types/write-file-atomic": "^4.0.0",
+    "jest": "^29.5.0",
     "typescript": "^4.9.5"
   }
 }
