--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@cliqz/adblocker-puppeteer": "^1.26.1",
+    "@prisma/client": "4.11.0",
     "csv": "^6.2.8",
     "express": "^4.18.2",
     "pako": "^2.1.0",
@@ -19,7 +20,6 @@
     "write-file-atomic": "^5.0.0"
   },
   "devDependencies": {
-    "ts-jest": "^29.0.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.14.6",
@@ -27,6 +27,8 @@
     "@types/tar": "^6.1.4",
     "@types/write-file-atomic": "^4.0.0",
     "jest": "^29.5.0",
+    "prisma": "^4.11.0",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   }
 }
