--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "process.argv": "^0.6.1",
     "puppeteer": "^19.7.1",
     "rome": "^11.0.0",
+    "sharp": "^0.32.0",
     "socket.io": "^4.6.1",
     "tar": "^6.1.13",
     "ts-node": "^10.9.1",
