(chore) test can now be called from root
Signed-off-by: Alexander Gemmingen <alexander.gemmingen@gmx.de>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "scripts": {
-        "start": "cd backend && npm start"
+        "start": "cd backend && npm start",
+        "test": "cd backend && npm test"
     },
     "dependencies": {
         "rome": "^11.0.0"
