--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "main": "index.ts",
   "scripts": {
     "start": "ts-node app.ts",
-    "test": "jest --silent"
+    "test": "jest --verbose"
   },
   "dependencies": {
     "@cliqz/adblocker-puppeteer": "^1.26.1",
