(chore) update readme fixed uppercase bug and output files not in repo
Signed-off-by: Alexander Gemmingen <alexander.gemmingen@gmx.de>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 node_modules
 Images
-dataset.tar.gz
+!frontend/output/backup/.gitkeep
+!frontend/output/dataset/.gitkeep
+frontend/output/backup/*
+frontend/output/dataset/*
+*.tar.gz
